--- a/stylesheet.css
+++ b/stylesheet.css
@@ -16,7 +16,7 @@ body {
 
 h1 {
   top: 1rem;
-  color: #aaaaaa;
+  color: #ffffff;
   position: relative;
   display: flex;
   justify-content: center;
@@ -24,17 +24,17 @@ h1 {
 }
 
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 30%; /* Location of the box */
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 30%;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0, 0, 0); /* Fallback color */
-  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 /* Modal Content */
